checker/tests/nullness-extra/multiple-errors/Expected.txt
C1.java:2: error: [initialization.field.uninitialized] the default constructor does not initialize field o
  Object o;
         ^
C2.java:2: error: [assignment] incompatible types in assignment.
  Object o = null;
             ^
  found   : null (NullType)
  required: @Initialized @NonNull Object
C3.java:4: error: cannot find symbol
      void bad(XXX p) {
               ^
  symbol:   class XXX
  location: class C3b
C3.java:1: error: [type.checking.not.run] NullnessChecker did not run because of a previous error issued by javac
public class C3 {
       ^
C4.java:1: error: [type.checking.not.run] NullnessChecker did not run because of a previous error issued by javac
public class C4 {
       ^
5 errors
